base/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: shopease
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: hashicorp/http-echo
        args:
        - "-text=Backend is working"
        ports:
        - containerPort: 5678
