base/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: shopease
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5678
    nodePort: 30030
