base/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: shopease
spec:
  selector:
    app: frontend
  ports:
  - port: 80
