base/grafana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: shopease
spec:
  selector:
    app: grafana
  ports:
  - port: 3000
