base/mysql-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: shopease
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
