base/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: shopease
spec:
  selector:
    app: prometheus
  ports:
  - port: 9090
